# DotRelay_Bridge

contracts/: Cargo.toml
contracts/src/: admin.rs  bridge_hub.rs  event_logger.rs  fee_calculator.rs  lib.rs  security.rs  token_registry.rs  transfer_manager.rs  xcm_handler.rs
contracts/src/tests/: bridge_hub_tests.rs  mod.rs  token_registry_tests.rs  transfer_manager_tests.rs
contracts/src/traits/: fee_management.rs  mod.rs  transferable.rs  xcm_compatible.rs
contracts/src/types/: errors.rs  mod.rs  parachain.rs  token.rs  transfer.rs
